Mobile Quick Fix
-Adjusted sizing and padding to make sure text doesn’t spill over.
-Also so it doesn’t move strangely on mobile chrome when the top bar
appears/disappears
-Pop down menu no longer hides behind images

--- a/main.css
+++ b/main.css
@@ -213,6 +213,7 @@ a:visited, a:target, a:hover, a:link, a:active{
     left: 0;
     padding: 0;
     display: none;
+    z-index: 10;
 }
 
 .mobile-dropdown-menu a{
@@ -246,12 +247,12 @@ a:visited, a:target, a:hover, a:link, a:active{
     margin: 0 -2vw;
     border-top: 3px solid #eee;
     border-radius: 8px;
-    height: 15vh;
+    height: 80px;
 }
 
 .mobile-item{
-    height: 90vh;
-    padding: 15vh 10vw;
+    height: 550px;
+    padding: 20px 10vw;
 }
 
 .mobile-item-title{
@@ -273,21 +274,21 @@ a:visited, a:target, a:hover, a:link, a:active{
 }
 
 .mobile-hobbies{
-    height: 20vh;
-    margin: 10vh 0;
+    height: 100px;
+    margin: 50px 0;
 }
 
 .mobile-hobbies img{
-    max-height: 20vh;
-    max-width: 20vh;
+    max-height: 100px;
+    max-width: 100px;
 }
 
 .mobile-see-more{
-    margin: 10vh 0;
+    margin: 100px 0;
 }
 
 .mobile-contact-me h3{
-    margin-bottom: 10vh;
+    margin-bottom: 50px;
 }
 
 @media screen and (max-width: 1046px){
